fixes issue #254: horizontal scrollbars for wide flowcharts (in both plain vanilla and denkbares skin)

--- a/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/jspwiki.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/jspwiki.css
@@ -1942,3 +1942,8 @@ div.coverflow .knob {
 	width:100px;
 	height:15px;
 }
+
+.defaultMarkup .markupText .FlowchartGroup {
+	overflow-x: auto;
+}
+
